<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.lue.erachat.Activity.CreateTeam.Main3Activity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_groupList"
        android:orderInCategory="100"
        android:title="@string/action_GroupList"
        app:showAsAction="never" />
    <item
        android:id="@+id/invitation"
        android:orderInCategory="100"
        android:title="@string/show_invitation"
        app:showAsAction="never" />
    <item
        android:id="@+id/blocked_users"
        android:orderInCategory="100"
        android:title="@string/blocked_users"
        app:showAsAction="never" />
    <!--<item
        android:id="@+id/login"
        android:orderInCategory="100"
        android:title="Login"
        app:showAsAction="never" />-->
</menu>
