<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="70dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/icon_profile"
        android:layout_marginRight="26dp"
        android:layout_marginEnd="26dp"
        android:layout_alignTop="@+id/imageView5"
        android:layout_toLeftOf="@+id/textView19"
        android:layout_toStartOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/addFriend"
        android:layout_below="@+id/imageView4"
        android:layout_alignRight="@+id/imageView4"
        android:layout_alignEnd="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="70dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/icon_people"
        android:layout_alignTop="@+id/imageView6"
        android:layout_alignRight="@+id/textView9"
        android:layout_alignEnd="@+id/textView9" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        app:srcCompat="@drawable/icon_eralive"
        android:layout_marginTop="44dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="70dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/icon_gift"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/textView8"
        android:layout_alignRight="@+id/textView8"
        android:layout_alignEnd="@+id/textView8" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="70dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/icon_erapoint"
        android:layout_alignTop="@+id/imageView7"
        android:layout_alignRight="@+id/textView9"
        android:layout_alignEnd="@+id/textView9" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="70dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/icon_erachatpoint"
        android:layout_alignTop="@+id/imageView8"
        android:layout_alignLeft="@+id/imageView6"
        android:layout_alignStart="@+id/imageView6" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="70dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/icon_radar_search"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/textView11"
        android:layout_alignLeft="@+id/textView11"
        android:layout_alignStart="@+id/textView11" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="70dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/icon_task"
        android:layout_alignTop="@+id/imageView10"
        android:layout_alignLeft="@+id/imageView8"
        android:layout_alignStart="@+id/imageView8" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="70dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/icon_events"
        android:layout_alignTop="@+id/imageView11"
        android:layout_alignRight="@+id/textView14"
        android:layout_alignEnd="@+id/textView14" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="70dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/icon_settings"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView15"
        android:layout_alignLeft="@+id/textView18"
        android:layout_alignStart="@+id/textView18" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="70dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/icon_erachat"
        android:layout_alignTop="@+id/imageView13"
        android:layout_alignLeft="@+id/textView16"
        android:layout_alignStart="@+id/textView16" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="70dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/icon_about"
        android:layout_alignTop="@+id/imageView14"
        android:layout_alignLeft="@+id/imageView12"
        android:layout_alignStart="@+id/imageView12" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:text="@string/createGroup"
        android:layout_alignBaseline="@+id/textView8"
        android:layout_alignBottom="@+id/textView8"
        android:layout_toLeftOf="@+id/textView14"
        android:layout_toStartOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView9"
        android:layout_alignBottom="@+id/textView9"
        android:layout_alignLeft="@+id/imageView6"
        android:layout_alignStart="@+id/imageView6"
        android:text="@string/eraLive"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/virtualGift"
        android:layout_below="@+id/imageView7"
        android:layout_alignLeft="@+id/imageView7"
        android:layout_alignStart="@+id/imageView7" />

    <TextView
        android:textAlignment="center"
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eraPoint"
        android:layout_alignBaseline="@+id/textView11"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignLeft="@+id/imageView11"
        android:layout_alignStart="@+id/imageView11"
        android:layout_alignRight="@+id/imageView8"
        android:layout_alignEnd="@+id/imageView8" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eraChatPoint"
        android:layout_alignBaseline="@+id/textView13"
        android:layout_alignBottom="@+id/textView13"
        android:layout_alignRight="@+id/imageView9"
        android:layout_alignEnd="@+id/imageView9" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radarSearch"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/imageView10"
        android:layout_alignLeft="@+id/imageView10"
        android:layout_alignStart="@+id/imageView10" />

    <TextView
        android:textAlignment="center"
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task"
        android:layout_alignBaseline="@+id/textView15"
        android:layout_alignBottom="@+id/textView15"
        android:layout_alignRight="@+id/imageView11"
        android:layout_alignEnd="@+id/imageView11"
        android:layout_alignLeft="@+id/imageView11"
        android:layout_alignStart="@+id/imageView11" />

    <TextView
        android:textAlignment="center"
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/events"
        android:layout_alignBaseline="@+id/textView16"
        android:layout_alignBottom="@+id/textView16"
        android:layout_alignRight="@+id/textView10"
        android:layout_alignEnd="@+id/textView10"
        android:layout_alignLeft="@+id/imageView12"
        android:layout_alignStart="@+id/imageView12" />

    <TextView
        android:textAlignment="center"
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/settings"
        android:layout_below="@+id/imageView14"
        android:layout_alignLeft="@+id/imageView10"
        android:layout_alignStart="@+id/imageView10"
        android:layout_alignRight="@+id/textView8"
        android:layout_alignEnd="@+id/textView8" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutEraChat"
        android:layout_alignBaseline="@+id/textView18"
        android:layout_alignBottom="@+id/textView18"
        android:layout_alignRight="@+id/imageView14"
        android:layout_alignEnd="@+id/imageView14" />

    <TextView
        android:textAlignment="center"
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterpriseAccount"
        android:layout_alignBaseline="@+id/textView19"
        android:layout_alignBottom="@+id/textView19"
        android:layout_alignLeft="@+id/textView14"
        android:layout_alignStart="@+id/textView14"
        android:layout_alignRight="@+id/imageView15"
        android:layout_alignEnd="@+id/imageView15" />
</RelativeLayout>