<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true">
<LinearLayout
android:layout_marginTop="20dp"
    android:layout_weight="0.20"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

<LinearLayout

    android:layout_marginLeft="10dp"
    android:layout_marginTop="30dp"
    android:weightSum="1"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/linearLayout4">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_weight="0.30"
        app:srcCompat="@drawable/icon_profile" />

    <ImageView
        android:layout_weight="0.30"
        android:id="@+id/imageView5"
        android:layout_width="70dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/icon_people" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_weight="0.30"
        app:srcCompat="@drawable/icon_eralive" />
</LinearLayout>
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:weightSum="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/linearLayout4"
        android:layout_alignLeft="@+id/linearLayout4"
        android:layout_alignStart="@+id/linearLayout4"
        android:layout_alignRight="@+id/linearLayout4"
        android:layout_alignEnd="@+id/linearLayout4"
        android:id="@+id/linearLayout13">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/addFriend"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.34"
            android:textAlignment="center"
            android:text="@string/createGroup" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.31"
            android:text="@string/eraLive"
            android:textAlignment="center" />

    </LinearLayout>
</LinearLayout>
   <LinearLayout
       android:layout_weight="0.20"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout13"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:id="@+id/linearLayout14">
        <ImageView
            android:layout_weight="0.30"
            android:id="@+id/imageView7"
            android:layout_width="70dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/icon_gift" />

        <ImageView
            android:layout_weight="0.30"
            android:id="@+id/imageView8"
            android:layout_width="70dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/icon_erapoint" />
        <ImageView
            android:layout_weight="0.30"
            android:id="@+id/imageView9"
            android:layout_width="70dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/icon_erachatpoint"
            android:layout_alignTop="@+id/imageView8"
            android:layout_alignLeft="@+id/imageView6"
            android:layout_alignStart="@+id/imageView6" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:weightSum="1"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout14"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/linearLayout15">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:text="@string/virtualGift"
            android:textAlignment="center" />

        <TextView
            android:layout_weight="0.27"
            android:id="@+id/textView13"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/eraPoint"
            android:textAlignment="center" />

        <TextView
            android:layout_weight="0.30"
            android:id="@+id/textView14"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/eraChatPoint"
            android:textAlignment="center"/>
    </LinearLayout>
   </LinearLayout>
    <LinearLayout
        android:layout_weight="0.20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout

        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:weightSum="1"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout15"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:id="@+id/linearLayout16">

        <ImageView
            android:layout_weight="0.30"
            android:id="@+id/imageView10"
            android:layout_width="70dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/icon_radar_search" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_weight="0.30"
            app:srcCompat="@drawable/icon_task" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_alignTop="@+id/imageView11"
            android:layout_weight="0.30"
            app:srcCompat="@drawable/icon_events" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:weightSum="1"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout16"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/linearLayout17">
        <TextView
            android:layout_weight="0.27"
            android:textAlignment="center"
            android:id="@+id/textView15"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/radarSearch" />

        <TextView
            android:layout_weight="0.22"
            android:textAlignment="center"
            android:id="@+id/textView16"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/task"
            android:layout_alignBaseline="@+id/textView15"
            android:layout_alignBottom="@+id/textView15"
            android:layout_alignRight="@+id/imageView11"
            android:layout_alignEnd="@+id/imageView11"
            android:layout_alignLeft="@+id/imageView11"
            android:layout_alignStart="@+id/imageView11" />

        <TextView
            android:layout_weight="0.32"
            android:textAlignment="center"

            android:id="@+id/textView17"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/events"
            android:layout_alignBaseline="@+id/textView16"
            android:layout_alignBottom="@+id/textView16"
            android:layout_alignRight="@+id/textView10"
            android:layout_alignEnd="@+id/textView10"
            android:layout_alignLeft="@+id/imageView12"
            android:layout_alignStart="@+id/imageView12" />
    </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:orientation="vertical">

            <LinearLayout

                android:id="@+id/linearLayout18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/linearLayout17"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="25dp"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.30"
                    app:srcCompat="@drawable/icon_settings" />

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.30"
                    app:srcCompat="@drawable/icon_erachat" />

                <ImageView
                    android:id="@+id/imageView15"
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.30"
                    app:srcCompat="@drawable/icon_about" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/linearLayout18"
                android:layout_marginTop="10dp"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.37"
                    android:text="@string/settings"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.21"
                    android:text="@string/aboutEraChat"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/enterpriseAccount"
                    android:textAlignment="center"
                    android:layout_weight="0.27" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>