<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lue.erachat.Activity.VerifyVerification">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterVerificationCode"

        android:textSize="15sp"
        tools:textColor="@color/text_color"
        android:layout_marginTop="22dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:textAlignment="center"
        android:background="@drawable/alertbg_top"
        android:id="@+id/editText"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"

        android:layout_marginTop="18dp"
        android:layout_below="@+id/textView"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />

    <Button
        android:id="@+id/submit"
        android:layout_width="303dp"
        android:layout_height="50dp"
        android:text="Submit"
        android:textColor="@android:color/white"
        android:background="@drawable/button_primary"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resendCode"
        android:textSize="15sp"
        android:textColor="@color/text_color"
        android:layout_below="@+id/submit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp" />

    <Button
        android:textColor="@android:color/white"
        android:background="@drawable/cancelpagebtn"
        android:id="@+id/resend"
        android:layout_width="264dp"
        android:layout_height="46dp"
        android:text="@string/resendverification"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
