<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/transparent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.17"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/text_background_primary"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/msgimg" />

            <TextView
                android:id="@+id/mobileno"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/phonenobtn"
                android:gravity="center"
                android:text="9912345678"
                android:textColor="#000000"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/alertinstr"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="10dp"
                android:gravity="top|center"
                android:text="@string/viasms"
                android:textColor="@color/grey"
                android:textSize="15dp"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_gravity="bottom|center"
            android:background="@drawable/text_background_white"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/termsok"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/activationpagebtn"
                android:text="@string/ok"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <View
                android:layout_width="10dp"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/termscancel"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginRight="1dp"
                android:background="@drawable/cancelpagebtn"
                android:text="@string/cancel"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
